--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@types/jsdom": "^21.1.7",
-    "classnames": "^2.5.1",
     "jsdom": "^25.0.1",
+    "lucide-react": "^0.452.0",
     "next": "14.2.15",
+    "node-html-markdown": "^1.3.0",
+    "radash": "^12.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "tailwind-merge": "^2.5.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
