--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.15",
     "@types/jsdom": "^21.1.7",
+    "@vercel/kv": "^3.0.0",
+    "dotenv": "^16.4.5",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
